<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:padding="40dip"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/main_title"
    android:gravity="center_vertical|center_horizontal"
    android:layout_marginBottom="25dip"
    android:textSize="24.5sp"
    />
<Button
    android:id="@+id/start_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/start_label"
    />
<Button
    android:id="@+id/stop_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/stop_label"
    />
</LinearLayout>