<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:padding="10dip"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_label"
        android:layout_marginBottom="5dip"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionDone"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_label"
        android:layout_marginBottom="5dip"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionDone"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost_label"
        android:layout_marginBottom="5dip"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/cost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionDone"
        />
</LinearLayout>